# universal-metal-flash-attention

./: .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .swiftformat  Makefile  Package.swift  Package.swift.backup  README.md
.github/: dependabot.yml  markdown-link-check.json
.github/workflows/: ci.yml  release.yml
Sources/MFABridge/: MFABridge+Quantized.swift  MFABridge.swift
Sources/MFAFFI/: mfa_ffi.c
Tests/: test_metal_sdpa_config.py  test_mfa_systematic.py  test_quantization_config.py
Tests/FlashAttentionTests/: BackwardPassTests.swift
Tests/MFAFFITests/: BasicPrecisionTest.swift  (+7 more)
benchmarks/: BenchmarkQuantizedAttention.swift  GEMMBenchmark.swift  GluonOptimizationBenchmark.swift  MemoryBandwidthBenchmark.swift  QuantizedBackwardBenchmark.swift  SimpleGEMMBenchmark.swift
docs/: CORRECTNESS_ANALYSIS.md  EXAMPLES.md  INSTALL.md  PERFORMANCE_RESULTS.md  QUANTIZED_ATTENTION.md  QUANTIZED_TRAINING_BINDINGS.md  QuantizedMetalSIMDImplementation.md  notes.md
examples/: QuantizedAttentionExample.swift  pytorch_sdpa_replacement.py  swift-bridge-benchmark.swift
examples/python-ffi/: README.md  debug_buffer_test.py  debug_pytorch_overhead.py  debug_test.py  example_basic.py  perf_test.py  pyproject.toml  requirements.txt  test_native_config.py  test_pytorch_basic.py
examples/python-ffi/benchmarks/: benchmark_performance.py
examples/python-ffi/src/umfa/: __init__.py  _ffi.py  core.py  utils.py
examples/python-ffi/tests/: test_basic.py
examples/rust-ffi/: Cargo.toml  README.md  build.rs
examples/rust-ffi/src/: benchmark.rs  main.rs
(+127 files in other folders)
