[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umfa-python"
version = "1.0.0"
description = "Universal Metal Flash Attention Python Bindings"
authors = [
    {name = "Universal Metal Flash Attention Contributors"}
]
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "typing-extensions>=4.5.0"
]

[project.optional-dependencies]
torch = ["torch>=2.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/your-org/universal-metal-flash-attention"
Repository = "https://github.com/your-org/universal-metal-flash-attention.git"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
strict = true
